--- a/agogui-rest/src/main/resources/ext/gridtemplates/webEntity.vm
+++ b/agogui-rest/src/main/resources/ext/gridtemplates/webEntity.vm
@@ -1,13 +1,13 @@
 <article id="detailResults" class="text-center clearfix">
     <input type="checkbox" name="item_check" class="item_check" value="${item.id}" />
     <a class="thumbnail col-xs-12"
-    #if ($item.entityRef == "folder")
+    #if ($item.webEntityType.entityRef == "folder")
         href='#?filter={"eq":{"webEntity":${item.id}}}'
     #else
         href='#?id=${item.id}&tab=1'
     #end
     >
-      <figure><img class="img-responsive" src="/img/icon_entities/${item.icon}.png" title="${item.entityName}" alt=""></figure>
+      <figure><img class="img-responsive" src="/img/icon_entities/${item.webEntityType.icon}.png" title="${item.webEntityType.entityName}" alt=""></figure>
       <div class="cnt-usuario">
         <strong>${item.name}</strong>
       </div>
