--- a/agogui-rest/src/main/resources/ext/gridtemplates/webFile.vm
+++ b/agogui-rest/src/main/resources/ext/gridtemplates/webFile.vm
@@ -1,5 +1,5 @@
 <article id="detailResults" class="text-center clearfix">
-    <input type="checkbox" name="item_check" class="item_check" value="${item.id}" />
+    <input type="checkbox" name="item_check" class="item_check icon_${item.icon}" value="${item.id}" />
     <a class="thumbnail col-xs-12"
     #if ($item.type == "folder")
         href='#?filter={"eq":{"webFile":${item.id}}}'
@@ -7,7 +7,7 @@
         href='#?id=${item.id}&tab=1'
     #end
     >
-      <figure><img class="img-responsive" src="/img/icon_types/${item.icon}.png" alt=""></figure>
+      <figure><img class="img-responsive" src="/libimg/icon_types/${item.icon}.png" alt=""></figure>
       <div class="cnt-usuario">
         <strong>${item.name}</strong>
       </div>
